Updated footer-main feature

--- a/src/app/shared/main-footer/main-footer.component.html
+++ b/src/app/shared/main-footer/main-footer.component.html
@@ -2,16 +2,7 @@
    <div class="container no-padding">
       <div class="col-md-5 no-padding">
          <div class="footer__logo col-sm-3 col-md-12 no-padding">
-             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 183 33" style="enable-background:new 0 0 183 33;" xml:space="preserve">
-               <style type="text/css">
-               .st0{fill:#099D6E;}
-               .st1{font-family:'Industry-Bold';}
-               .st2{font-size:31.626px;}
-               .st3{font-family:'Industry-Light';}
-               </style>
-               <text transform="matrix(0.7119 0 0 1 39.6665 28.76)"><tspan x="0" y="0" class="st0 st1 st2">HANAH</tspan><tspan x="114.5" y="0" class="st0 st3 st2">SP</tspan></text>
-               <polyline class="st0" points="147.5,25.9 146.1,28.6 148.9,28.6 "/>
-               </svg>
+            <img src="assets/img/KAI.svg">
             </div>
             <div class="footer__dati col-sm-9 col-md-12 no-padding">
                <span>
