update course detail and edit menu bar

--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -27,7 +27,7 @@
 		<!-- course -->
 			<div *ngFor= "let courses of courses" routerLinkActive="active" class="serviceWrapper">
 				<div class="service linkTo seo pointer">
-					<img class="lazy service__feat" width="270.5" src="assets/img/courses.svg" style="">
+					<img class="lazy service__feat" width="270.5" src="assets/img/courses.svg">
 					<h4 class="service__title text-uppercase" >{{courses.title}}</h4>
 					<div class="service__excerpt hidden-xs">
 						<p>{{courses.decription}}
