--- a/src/app/shared/main-header/main-header.component.html
+++ b/src/app/shared/main-header/main-header.component.html
@@ -31,12 +31,12 @@
                   </li>
 
                   <li id="menu-item-23" *ngFor = "let cate of cate" routerLinkActive="active" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-23 menu-page-9">
-                     <a [routerLink]= "['/', cate.title]" >{{cate.title}}</a>
-                     <ul class="sub-menu">
+                     <a [routerLink]= "[cate.routerUrl]" >{{cate.title}}</a>
+                     <!-- <ul class="sub-menu">
 
                         <li id="menu-item-205" *ngFor = "let childcate of cate.class" routerLinkActive="active" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-205 menu-page-33"><a [routerLink]= "['/', cate.title, childcate]">{{childcate}}</a>
                         </li>
-                     </ul>
+                     </ul> -->
                   </li>
 
                   <li id="menu-item-19" class="contacts-icon menu-item menu-item-type-post_type menu-item-object-page menu-item-19 menu-page-17"><a (click)="goToContact()" routerLink="/contact">CONTACT</a></li>
