Updated code: (1)Code style (2)Format model (3)Router

--- a/src/app/find-us/find-us.component.html
+++ b/src/app/find-us/find-us.component.html
@@ -4,7 +4,7 @@
 	<div class="barba-container team page" data-namespace="page_team" data-page-color="">
 		<div class="homeExp__txt text-center">
 			<h2 class="homeMktg__title homeSection__title">"SPIRIT"</h2>
-         <main-title [items]="items"></main-title>
+         <main-title [main_title]="main_title"></main-title>
          <main-description [descriptions]="descriptions"></main-description>
 			<a routerLink="/home"><main-button></main-button></a>
 		</div>
