--- a/src/app/course/components/course-detail/course-detail.component.html
+++ b/src/app/course/components/course-detail/course-detail.component.html
@@ -5,12 +5,12 @@
           <div class="container no-padding">
               <div class="col-sm-7 col-md-6 no-padding-left pageVisual__subWrapper">
                   <h1 class="pageVisual__sub homeSection__sub" id="typed">
-                  <span class="sologan" typingAnimation [typeSpeed]="50" [condition]="start" [startDelay]="1000" [hideCursorOnComplete]="true">
+                  <!-- <span class="sologan" typingAnimation [typeSpeed]="50" [condition]="start" [startDelay]="1000" [hideCursorOnComplete]="true">
                       {{stringSologan1}}
                   </span><br />
                   <span class="sologan" typingAnimation [typeSpeed]="50" [condition]="start" [startDelay]="1000" [hideCursorOnComplete]="true">
                       {{stringSologan2}}
-                  </span>
+                  </span> -->
                   </h1>
               </div>
               <div class="col-sm-5 col-md-6 pageVisual__imageWrapper no-padding-right">
@@ -94,11 +94,11 @@
                 <ul class="lifestyleWrapper__list clearfix">
                    <li class="lifestyleWrapper__img no-padding"><img class="lazy" alt="" src="assets/img/focus/travel.jpg" ></li>
                    <li class="lifestyleWrapper__img no-padding"><img class="lazy" alt="" src="assets/img/focus/P8810491.jpg" ></li>
-                  
+
                 </ul>
              </div>
           </div>
-         
+
        </div>
     </div>
 
