--- a/src/app/dashboard/course/course-detail/course-detail.component.html
+++ b/src/app/dashboard/course/course-detail/course-detail.component.html
@@ -48,7 +48,7 @@
                     <p>{{tr.description}}</p>
                 </div>
                 <div class="panel-body-right">
-                 <img src="http://localhost:8080{{tr.image}}" >
+                 <img src="https://pau-project.herokuapp.com{{tr.image}}" >
                </div>
             </div>
             <!-- panel -->
