--- a/src/app/dashboard/setting/setting.component.html
+++ b/src/app/dashboard/setting/setting.component.html
@@ -96,7 +96,7 @@
                  <!-- remove -->
 
                   <div class="panel-body-right" >
-                    <img src="http://localhost:8080{{tr.image}}">
+                    <img src="https://pau-project.herokuapp.com{{tr.image}}">
                   </div>
                 </div>
                 <!-- panel -->
