--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -33,7 +33,35 @@
               <div class="section">
                 <div class="layoutArea">
                   <div class="column">
-                    <h2>SỨ MỆNH</h2>
+
+                    <p>KAI SWIM là trung tâm dạy bơi kèm riêng với tiêu chí cung cấp cho học viên giờ học
+                      an toàn, hiệu quả nhất. Bằng việc cung cấp các khóa dạy bơi kèm riêng cam kết chất
+                      lượng, giảng dạy theo chuẩn kiến thức, phù hợp với thể trạng, khả năng, thời gian học
+                      tập của học viên. Chúng tôi đã và đang giúp cho rất nhiều học viên sợ nước, chưa biết
+                      bơi đến biết bơi và bơi đẹp trong khoảng 10-12 buổi học.</p>
+
+                    <p>Trong suốt hơn 07 năm hoạt động với các lớp bơi kèm riêng tại nhà hoặc hồ bơi tự
+                      chọn, chúng tôi đã nghiên cứu, lựa chọn cho mình hướng đi riêng. Phương châm hoạt
+                      động của chúng tôi là Dạy bơi kèm riêng cam kết chất lượng, chúng tôi sẽ chỉ nhận học
+                      viên với cam kết biết bơi 100% cùng các điều kiện căn bản của một môn thể thao: sự
+                      yêu thích và nhiệt tình với học bơi, muốn khắc phục chứng sợ nước &amp; quan trọng nhất
+                      là cùng hợp tác với giáo viên.</p>
+
+                    <p>
+                      Với các bé nhỏ tuổi (dưới 6 tuổi) và sợ nước, một khóa bơi căn bản kéo dài một thời
+                      gian nhất định (thường là 12-15 buổi) sẽ giúp bé dạn dĩ hơn với môi trường nước.
+                      Được các thầy cô hướng dẫn cho những động tác căn bản của quạt tay, đạp chân và
+                      thở nước, bé sẽ có những khái niệm hết sức căn bản cho việc biết bơi sau này. Sự
+                      an toàn của bé nếu có những sơ xuất không may xảy ra với nước, bé cũng có thể tự
+                      mình ứng phó được trong phạm vi nhất định.</p>
+                    <p>
+                      Được sự tin tưởng và ủng hộ của Quý khách hàng, chúng tôi luôn tâm niệm và duy
+                      trì phương châm hoạt động như đã đề ra nhằm giữ uy tín và trách nhiệm của một
+                      người thầy, cũng như duy trì lòng đam mê và tự hào mỗi khi có một học viên được
+                      hoàn tất cho mỗi khóa học bơi.
+                                            </p>
+
+                    <!-- <h2>SỨ MỆNH</h2>
                       <p>
                         Mang đến CHẤT LƯỢNG CHO HỌC VIÊN, nhiệt tình và trách nhiệm ở phương pháp,
                         TẠO niềm vui và hứng thú với bơi lội, PHÁT TRIỂN bơi lội, PHÒNG CHỐNG ĐUỐI
@@ -42,7 +70,7 @@
                       <p>
                         “Dạy bơi kèm riêng cam kết chất lượng!” – Chúng tôi đã, đang và sẽ theo đúng định hướng
                         “đơn giản” này. Thật vậy, chỉ có dạy bơi kèm riêng, các học viên mới được nắm bắt, khắc phục
-                        và thẩm thấu bơi lội nhanh nhất (trong 10-12 buổi).</p>
+                        và thẩm thấu bơi lội nhanh nhất (trong 10-12 buổi).</p> -->
                   </div>
                 </div>
               </div>
