--- a/src/app/shared/main-footer/main-footer.component.html
+++ b/src/app/shared/main-footer/main-footer.component.html
@@ -24,18 +24,17 @@
                   <li><a >Body rental</a></li>
                   <li><a >Training</a></li>
                   <li><a >Audit</a></li>
-                  <li><a >Business plan</a></li>
                </ul>
             </div>
             <div class="hidden-xs footer__col footer__col--mkgt col-sm-4 no-padding">
                <strong class="footer__title"><a >PROGRAM</a></strong>
                <ul>
-                  <li><a >Marketing plan</a></li>
-                  <li><a >SEO</a></li>
-                  <li><a >SEM</a></li>
-                  <li><a >Social advertising</a></li>
-                  <li><a >CRO</a></li>
-                  <li><a >Analytics</a></li>
+                  <li><a >Backstroke</a></li>
+                  <li><a >Breaststroke</a></li>
+                  <li><a >Crawl</a></li>
+                  <li><a >Diving</a></li>
+                  <li><a >Diving board</a></li>
+                  <li><a >dog-paddle</a></li>
                </ul>
             </div>
             <div class="hidden-xs footer__col footer__col--people col-sm-3 no-padding">
