--- a/src/app/course/components/course-detail/course-detail.component.html
+++ b/src/app/course/components/course-detail/course-detail.component.html
@@ -9,8 +9,9 @@
             <span class="sologan">
               {{stringSologan1}}
             </span>
-            <br />
-            <span class="sologan">
+            <br/>
+            <br/>
+            <span class="sologans">
               {{stringSologan2}}
             </span>
           </h1>
