--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -23,7 +23,7 @@
         <div class="container no-padding">
           <div class="breadcrumbs"><span xmlns:v="#"><span typeof="v:Breadcrumb"><a [routerLink]="['/home']" rel="v:url" property="v:title">Home</a> / <span class="breadcrumb_last">All Courses</span></span></span></div>
           <div class="settoriContent__mainText text-center">
-            <h1 class="homeSection__sub settoriContent__sub">KAI SWIM LÀ SỰ LỰA CHỌN HÀNG ĐẦU!</h1>
+            <h1 class="homeSection__sub settoriContent__sub sologan">KAI SWIM LÀ SỰ LỰA CHỌN HÀNG ĐẦU!</h1>
             <div class="settoriContent__txt col-sm-9 col-md-8 no-padding center-block">
               <div class="page" title="Page 6">
                 <div class="section">
