--- a/src/app/course/components/course-detail/course-detail.component.css
+++ b/src/app/course/components/course-detail/course-detail.component.css
@@ -1,8 +1,9 @@
 form, input, textarea, select, button, div, p {
-  font-family: "Roboto", sans-serif;
   font-size: 14px;
   letter-spacing: 0.04em;
   -webkit-font-smoothing: antialiased;
+  text-align: justify;
+  font-family: 'Noto Serif', serif!important;
 }
 
 .sologan{
@@ -10,15 +11,19 @@ form, input, textarea, select, button, div, p {
     font-weight: lighter;
     font-size: 35px;
     text-transform: uppercase;
+    color: #099d6e;
+    font-family: 'Noto Serif', serif!important;
 }
 
 
 .sologans{
     font-style: normal;
     font-weight: lighter;
-    font-size: 25px;
+    font-size: 20px;
     text-transform: lowercase;
     line-height: 1.1;
+    font-family: 'Noto Serif', serif!important;
+
 }
 
 .pageVisual__sub br {
