--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -46,7 +46,7 @@
                 </li>
               </ul>
 
-              <div class="formLabel clearfix">
+              <div class="formLabel clearfix" style="background-color: #F5F5F5;">
                 <div class="col-sm-8 no-padding formLabel__txtWrapper">
                   <span class="formLabel__icon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="50.4" height="51.5" baseProfile="tiny">
