--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -133,3 +133,11 @@
 .text-desc {
   font-family: "Roboto", sans-serif;
 }
+
+.roundButton{
+  display: none!important;
+}
+
+.roundButton--green {
+  display: none!important;
+}
