--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -83,8 +83,6 @@
             Trainers
          </h2>
 
-
-
                 <main-button routerLink="/trainer">
                 </main-button>
 
@@ -135,7 +133,7 @@
    <div class="container no-padding">
       <div class="homeMktg__txt text-center">
          <h2 class="homeMktg__title homeSection__title">FEEDBACK</h2>
-         <h3 class="homeMktg__title homeSection__sub"> NHỮNG NGƯỜI ĐÃ ĐƯỢC TRẢI NGHIỆM <br /> TẠI KAISPORT</h3>
+         <h3 class="homeMktg__title homeSection__sub"> "Khách hàng ở KAISPORT"</h3>
 
          <div class="homeMktg__services">
             <div class="owl-carousel owl-theme owl-loaded owl-drag">
