--- a/src/app/shared/main-footer/main-footer.component.html
+++ b/src/app/shared/main-footer/main-footer.component.html
@@ -3,7 +3,7 @@
    <div class="container no-padding">
       <div class="col-md-5 no-padding">
          <div class="footer__logo col-sm-3 col-md-12 no-padding">
-            <img class="logo-footer" src="assets/img/KAI.svg">
+            <img class="logo-footer" src="assets/img/KAI-nobackground.png">
             </div>
             <div class="footer__dati col-sm-9 col-md-12 no-padding">
                <span>
@@ -34,7 +34,7 @@
                   <li><a >Crawl</a></li>
                   <li><a >Diving</a></li>
                   <li><a >Diving board</a></li>
-                  <li><a >dog-paddle</a></li>
+                  <li><a >Dog-paddle</a></li>
                </ul>
             </div>
             <div class="hidden-xs footer__col footer__col--people col-sm-3 no-padding">
