--- a/src/app/shared/trainer/trainer.component.html
+++ b/src/app/shared/trainer/trainer.component.html
@@ -4,7 +4,7 @@
     <div class="service__excerpt hidden-xs">
         <p>{{trainer.description}}</p>
     </div>
-    <a class="service__link linkFrom roundButton roundButton--green hidden-xs"></a>
+    <!-- <a class="service__link linkFrom roundButton roundButton--green hidden-xs"></a> -->
     <a class="service__link button button--black hidden-sm hidden-md hidden-lg" (click)="onTrainerClicked($event, trainer.idTrainer)"
         href="javascript:void(0)">View Profile</a>
 </div>
