--- a/src/app/trainer/trainer.component.html
+++ b/src/app/trainer/trainer.component.html
@@ -31,7 +31,7 @@
             <div class="page" title="Page 10">
               <div class="section">
                 <div class="layoutArea">
-                  <div class="column" style="text-align: justify;">
+                  <div class="column" style="text-align: justify;font-family: 'Noto Serif', serif!important;">
                     <p>
                         Đội ngũ giảng viên cho khóa dạy bơi cấp tốc gồm cả nam và nữ được đào tạo bài
                         bản trong môi trường sư phạm chuyên sâu, hoặc vận động viên bơi lội chuyên nghiệp
