--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -1,10 +1,12 @@
 h1, h2, h3, h4, h5, h6, strong, b, th {
   font-weight: bold;
+  text-align: center;
 }
 
 form, input, textarea, select, button, div, p {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Noto Serif', serif!important;
   font-size: 14px;
   letter-spacing: 0.04em;
   -webkit-font-smoothing: antialiased;
+  text-align: justify;
 }
