Update on top page when click to previous page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <!--The router-outlet below is only a placeholder and can be replaced.-->
-<router-outlet></router-outlet>
+<router-outlet (deactivate)="onDeactivate()"></router-outlet>
