--- a/src/app/shared/main-header/main-header.component.html
+++ b/src/app/shared/main-header/main-header.component.html
@@ -44,7 +44,8 @@
                </ul>
             </nav>
             <div class="hidden-md hidden-lg menuContacts text-left">
-               <div class="menuContacts__phone"><i class="phone_icon"></i><a href="tel:'+390497386284">(+84) 049 738 6284</a></div>
+               <div class="menuContacts__phone"><i class="phone_icon"></i><a href="tel:'+390497386284">(+84) 905 080 484</a></div>
+               <div class="menuContacts__phone"><i class="phone_second" ></i><a href="tel:'+390497386284">(+84) 903 522 343</a></div>
                <div class="menuContacts__email"><i class="email_icon"></i><a href="mailto:info@store.is">info@hanahsport.is</a></div>
             </div>
          </div>
