--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -68,6 +68,7 @@
       </div>
       <div class="homeCons__featWrapper col-sm-5 col-md-6" style="padding-right: 0px">
          <img class="homeCons__feat lazy" src="assets/img/focuson.jpg" />
+         <!-- <iframe src="https://player.vimeo.com/video/137808583?title=0&byline=0&portrait=0" class="homeCons__feat lazy" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
       </div>
    </div>
 
