Fix login to home

--- a/src/app/dashboard/components/navbar/navbar.component.html
+++ b/src/app/dashboard/components/navbar/navbar.component.html
@@ -37,7 +37,7 @@
                         <p class="hidden-lg hidden-md">Notifications</p>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="" (click)="logout()">Đăng Xuất</a></li>
+                        <li><a href="javascript:void(0)" (click)="logout()">Đăng Xuất</a></li>
                         <li><a href="javascript:void(0)">Đổi Mật Khẩu</a></li>
 
                     </ul>
