--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -48,7 +48,7 @@
           </ul>
       </li> -->
       <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" (click)="logout()">
+            <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" (click)="logout()">
                 <i class="material-icons">person</i>
                 <p class="hidden-lg hidden-md">Đăng Xuất</p>
             </a>
