--- a/src/assets/sass/md/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/md/_sidebar-and-main-panel.scss
@@ -1,7 +1,7 @@
  .wrapper{
     position: relative;
     top: 0;
-    height: 100vh;
+    height: auto;
 }
 .bootstrap-navbar {
     position: absolute;
