--- a/src/app/dashboard/components/footer/footer.component.html
+++ b/src/app/dashboard/components/footer/footer.component.html
@@ -25,7 +25,7 @@
           </ul>
       </nav>
       <p class="copyright pull-right">
-          &copy; {{test | date: 'yyyy'}} <a href="/dashboard">Gâu Gâu Team</a>, made with love for a better web
+          &copy; {{test | date: 'yyyy'}} <a href="/dashboard" style="color: black">Gâu Gâu Team</a>
       </p>
   </div>
 </footer>
