--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <div class="logo" style="background: #ffffff;">
   <a href="home" class="simple-text">
-      <div class="logo-imgs">
-          <img width="183" height="33"  src="../assets/kailogo.svg"/>
-      </div>
+    <div class="logo-imgs">
+      <img width="183" height="33" src="../assets/kailogo.svg" />
+    </div>
 
   </a>
 </div>
@@ -16,7 +16,7 @@
     </a>
   </div> -->
 <div class="sidebar-wrapper">
-    <!-- <form class="navbar-form navbar-right" role="search" *ngIf="isMobileMenu()">
+  <!-- <form class="navbar-form navbar-right" role="search" *ngIf="isMobileMenu()">
         <div class="form-group form-black is-empty">
             <input type="text" class="form-control" placeholder="Search">
             <span class="material-input"></span>
@@ -27,50 +27,35 @@
     </form> -->
 
   <ul class="nav nav-mobile-menu" *ngIf="isMobileMenu()">
-      <li>
-          <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-              <!-- <i class="material-icons">dashboard</i> -->
-              <!-- <p class="hidden-lg hidden-md">Tổng Quan</p> -->
-          </a>
-      </li>
-      <!-- <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <i class="material-icons">notifications</i>
-              <span class="notification">5</span>
-              <p class="hidden-lg hidden-md">Thông Báo</p>
-          </a>
-          <ul class="dropdown-menu">
-              <li><a href="#">Mike John responded to your email</a></li>
-              <li><a href="#">You have 5 new tasks</a></li>
-              <li><a href="#">You're now friend with Andrew</a></li>
-              <li><a href="#">Another Notification</a></li>
-              <li><a href="#">Another One</a></li>
-          </ul>
-      </li> -->
-      <li class="dropdown">
-            <!-- <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" (click)="logout()">
+    <li>
+      <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
+        <i class="material-icons">dashboard</i>
+        <p class="hidden-lg hidden-md" (click)="logout()">Đăng Xuất</p>
+
+      </a>
+    </li>
+
+    <li class="dropdown">
+      <!-- <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" (click)="logout()">
                 <i class="material-icons">person</i>
                 <p class="hidden-lg hidden-md">Đăng Xuất</p>
             </a> -->
-            <!-- <ul class="dropdown-menu">
+      <!-- <ul class="dropdown-menu">
                 <li><a href="" (click)="logout()">Đăng Xuất</a></li>
 
             </ul> -->
-        </li>
+    </li>
   </ul>
 
   <div class="nav-container">
-      <ul class="nav"   >
-          <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}}">
-              <!--  -->
-              <a routerLink="/{{menuItem.path}}" >
-                  <i class="material-icons">{{menuItem.icon}}</i>
-                  <p>{{menuItem.title}}</p>
-              </a>
-          </li>
-
-            <li><a href="javascript:void(0)" (click)="logout()">Đăng Xuất</a></li>
-
-      </ul>
+    <ul class="nav">
+      <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}}">
+        <!--  -->
+        <a routerLink="/{{menuItem.path}}">
+          <i class="material-icons">{{menuItem.icon}}</i>
+          <p>{{menuItem.title}}</p>
+        </a>
+      </li>
+    </ul>
   </div>
 </div>
