--- a/src/assets/sass/md/_responsive.scss
+++ b/src/assets/sass/md/_responsive.scss
@@ -91,8 +91,47 @@
 }
 
 /*          Changes for small display      */
-
-@media (max-width: 991px){
+@media (min-width: 375px) {
+    body {
+        height: 550px;
+        overflow-y: scroll;
+    }
+}
+@media (min-width: 360px) {
+    body {
+        height: 550px;
+        overflow-y: scroll;
+    }
+}
+@media (min-width: 412px) {
+    body {
+        height: 550px;
+        overflow-y: scroll;
+    }
+}
+@media (min-width: 414px) {
+    body {
+        height: 550px;
+        overflow-y: scroll;
+    }
+}
+@media (min-width: 768px) {
+    body {
+        height: 550px;
+        overflow-y: scroll;
+    }
+}
+@media (min-width: 1024px) {
+    body {
+        height: 550px;
+        overflow-y: scroll;
+    }
+}
+@media (max-width: 991px) {
+    // body {
+    //     height: 550px;
+    //     overflow-y: scroll;
+    // }
     .sidebar{
         display: none;
         box-shadow: none;
@@ -130,9 +169,7 @@
         padding-top: 15px;
         background-color: rgba(0, 0, 0, 0.45);
     }
-    body {
-         position: relative;
-    }
+
     .main-panel{
        @include transform-translate-x(0px);
        @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
