--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -27,13 +27,7 @@
     </form> -->
 
   <ul class="nav nav-mobile-menu" *ngIf="isMobileMenu()">
-    <li>
-      <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
-        <i class="material-icons">dashboard</i>
-        <p class="hidden-lg hidden-md" (click)="logout()">Đăng Xuất</p>
 
-      </a>
-    </li>
 
     <li class="dropdown">
       <!-- <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" (click)="logout()">
@@ -56,6 +50,16 @@
           <p>{{menuItem.title}}</p>
         </a>
       </li>
+      <li>
+
+        <a href="javascript:void(0)">
+          <i class="material-icons">person</i>
+          <p (click)="logout()">Đăng Xuất</p>
+        </a>
+
+
+      </li>
+
     </ul>
   </div>
 </div>
