--- a/src/app/dashboard/setting/setting.component.css
+++ b/src/app/dashboard/setting/setting.component.css
@@ -274,8 +274,45 @@ margin-top: 10px;
     margin-top: 10px;
     }
 }
+@media (min-width: 412px) {
+  .panel-body-right img {
+    margin: left;
+    width: 70%;
+    height: 184px;
+    margin-top: 10px;
+    }
+}
+@media (min-width: 375px) {
+  .panel-body-right img {
+    margin: left;
+    width: 60%;
+    height: 184px;
+    margin-top: 10px;
+    }
+}
+@media (min-width: 414px) {
+  .panel-body-right img {
+    margin: left;
+    width: 70%;
+    height: 184px;
+    margin-top: 10px;
+    }
+}
+@media (min-width: 768px) {
+  .panel-body-right img {
+    margin: left;
+    width: 600px;
+    height: 184px;
+    margin-top: 10px;
+    }
+}
 @media (min-width:1200px){
-
+  .panel-body-right img{
+    margin: left;
+    width: 480px;
+    height: 184px;
+    margin-top: 10px;
+    }
   .navbar,.page-footer,main{
       padding-left:270px;
 
