--- a/src/app/dashboard/news-dashboard/news-dashboard.component.html
+++ b/src/app/dashboard/news-dashboard/news-dashboard.component.html
@@ -128,7 +128,7 @@
                                       overflow: hidden;
                                       text-overflow: ellipsis;">{{tr.title}}</p>
                             </td>
-                            <td>{{tr.createAt}}</td>
+                            <td>{{tr.createAt|date:'dd-MM-yyyy'}}</td>
                             <td>
                               <p style=" white-space: nowrap;
                                         width: 200px;
