--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -38,7 +38,7 @@
             <textarea id="contact-message" name="message" cols="40" rows="8" required ngModel #message="ngModel"></textarea>
           </fieldset>
           <fieldset >
-            <span style="color:red">{{err}}</span>
+            <!-- <span style="color:red">{{err}}</span> -->
           </fieldset>
           <button class="button button--black homeSection__button">Send</button>
         </form>
