--- a/src/app/trainer/trainer.component.html
+++ b/src/app/trainer/trainer.component.html
@@ -20,7 +20,7 @@
         <div class="breadcrumbs">
           <span xmlns:v="http://rdf.data-vocabulary.org/#">
             <span typeof="v:Breadcrumb">
-              <a [routerLink] = "['/home']" rel="v:url" property="v:title">Home</a> /
+              <a [routerLink]="['/home']" rel="v:url" property="v:title">Home</a> /
               <span class="breadcrumb_last">Trainers</span>
             </span>
           </span>
@@ -33,18 +33,16 @@
                 <div class="layoutArea">
                   <div class="column" style="text-align: justify;font-family: 'Noto Serif', serif!important;">
                     <p>
-                        Đội ngũ giảng viên cho khóa dạy bơi cấp tốc gồm cả nam và nữ được đào tạo bài
-                        bản trong môi trường sư phạm chuyên sâu, hoặc vận động viên bơi lội chuyên nghiệp
-                        và có nhiều kinh nghiệm trong quá trình giảng dạy. Chúng tôi luôn nắm bắt các yêu cầu,
-                        thể trạng và yếu tố tâm lý của từng học viên để có phương án dạy bơi cấp tốc phù hợp
-                        với từng đối tượng.
-                      </p>
-                      <p>
-                        Dưới sự giám sát chặt chẽ tận tâm (1-kèm-1) của các huấn luyện viên, học viên sẽ
-                        nắm bắt được toàn diện các động tác kỹ thuật bơi lội một cách chính xác và nhanh
-                        chóng nhất. Vì thế, chúng tôi hoàn toàn cam kết chất lượng 100%, đáp ứng được mọi
-                        nguyện vọng của học viên, đặc biệt là các học viên với nhu cầu học bơi cấp tốc để
-                        nhanh chóng đạt được mục đích đặt ra trong quỹ thời gian có giới hạn.</p>
+                      Đội ngũ giảng viên cho khóa dạy bơi cấp tốc gồm cả nam và nữ được đào tạo bài bản trong môi trường sư phạm chuyên sâu, hoặc
+                      vận động viên bơi lội chuyên nghiệp và có nhiều kinh nghiệm trong quá trình giảng dạy. Chúng tôi luôn
+                      nắm bắt các yêu cầu, thể trạng và yếu tố tâm lý của từng học viên để có phương án dạy bơi cấp tốc phù
+                      hợp với từng đối tượng.
+                    </p>
+                    <p>
+                      Dưới sự giám sát chặt chẽ tận tâm (1-kèm-1) của các huấn luyện viên, học viên sẽ nắm bắt được toàn diện các động tác kỹ thuật
+                      bơi lội một cách chính xác và nhanh chóng nhất. Vì thế, chúng tôi hoàn toàn cam kết chất lượng 100%,
+                      đáp ứng được mọi nguyện vọng của học viên, đặc biệt là các học viên với nhu cầu học bơi cấp tốc để
+                      nhanh chóng đạt được mục đích đặt ra trong quỹ thời gian có giới hạn.</p>
                   </div>
                 </div>
               </div>
@@ -60,10 +58,10 @@
             <img src="http://45.77.44.246:8080{{trainers.image}}" />
             <div class="teamWrap__content text-center">
               <strong class="teamWrap__name">{{trainers.firstName+" "+trainers.lastName}}</strong>
-              <span class="teamWrap__role">{{trainers.description}}</span>
-              <span class="teamWrap__role">{{trainers.birthday}}</span>
-              <span class="teamWrap__role">{{trainers.address}}</span>
-              <span class="teamWrap__role">{{trainers.phone}}</span>
+              <span class="teamWrap__role">Vai Trò: {{trainers.description}}</span>
+              <span class="teamWrap__role">Ngày Sinh: {{trainers.birthday|date:'dd-MM-yyyy'}}</span>
+              <span class="teamWrap__role">Địa Chỉ: {{trainers.address}}</span>
+              <span class="teamWrap__role">SDT: {{trainers.phone}}</span>
             </div>
             <div class="teamWrap__overlay"></div>
           </li>
