--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,7 +57,7 @@
             <a class="background-cate">FOCUS ON</a>
          </h2>
          <h3 class="homeCons__title homeSection__sub">{{focusitems.title}}</h3>
-         <div class="homeCons__excerpt homeSection__excerpt" style="font-style: italic;">
+         <div class="homeCons__excerpt homeSection__excerpt" style="font-style: normal;">
             <p>{{focusitems.description}}</p>
          </div>
 
@@ -81,7 +81,7 @@
    <div class="container no-padding">
       <div class="homeMktg__txt text-center">
          <h2 class="homeMktg__title homeSection__title">
-            Trainers
+            TRAINERS
          </h2>
 
                 <main-button routerLink="/trainer">
@@ -108,8 +108,9 @@
    <div class="container no-padding">
       <div class="homeMktg__txt text-center">
          <h2 class="homeMktg__title homeSection__title">
-            Trainers
+            TRAINERS
          </h2>
+         <h3 class="homeMktg__title homeSection__sub">ĐỘI NGŨ NHÂN VIÊN</h3>
                 <main-button routerLink="/trainer">
                 </main-button>
 
@@ -143,7 +144,7 @@
 
                      <div class="owl-item active repo" >
                         <div class="service linkTo pointer" style="padding-left: 0px; background-color: #F5F5F5">
-                           <img class="lazy service__feat" width="270.5" src="http://45.77.44.246:8080/images/trainer/1529854834.jpg" style="">
+                           <img class="lazy service__feat" width="270.5" src="http://dubydu.com/wp-content/uploads/2018/03/headshot.png" style="">
                            <h4 class="service__title text-uppercase">Nguyễn Đình Lý</h4>
                            <div class="service__excerpt">
                               <p>Sau 3 tháng học bơi tại trung tâm mình đã tiến bộ hơn rất nhiều, đến thời điểm hiện tại mình đã làm chủ được bản thân khi dưới nước và không còn sợ hãi như trước đây, cảm ơn trung tâm rất nhiều!
@@ -154,10 +155,10 @@
 
                       <div class="owl-item active repo" >
                         <div class="service linkTo pointer" style="padding-left: 0px; background-color: #F5F5F5">
-                           <img class="lazy service__feat" width="270.5" src="http://45.77.44.246:8080/images/trainer/1529854834.jpg" style="">
+                           <img class="lazy service__feat" width="270.5" src="http://dubydu.com/wp-content/uploads/2018/03/avatar.jpg" style="">
                            <h4 class="service__title text-uppercase">Dương Văn An</h4>
                            <div class="service__excerpt">
-                              <p>Sau 3 tháng học bơi tại trung tâm mình đã tiến bộ hơn rất nhiều, đến thời điểm hiện tại mình đã làm chủ được bản thân khi dưới nước và không còn sợ hãi như trước đây, cảm ơn trung tâm rất nhiều!
+                              <p>Một trong những trung tâm dạy bơi hàng đầu tại Đà Nẵng, mình hài lòng từ chuyên môn cho đến thiết bị vật chất! Bộ phận training vui vẻ, giúp đỡ nhiệt tình những thành viên, thật sự là một trung tâm hoàn hảo.
                               </p>
                            </div>
                         </div>
@@ -165,10 +166,10 @@
 
                      <div class="owl-item active repo" >
                         <div class="service linkTo pointer" style="padding-left: 0px; background-color: #F5F5F5">
-                           <img class="lazy service__feat" width="270.5" src="http://45.77.44.246:8080/images/trainer/1529854834.jpg" style="">
+                           <img class="lazy service__feat" width="270.5" src="http://dubydu.com/wp-content/uploads/2018/03/CROPPED-Portrait-2.jpg" style="">
                            <h4 class="service__title text-uppercase">Cao Văn Lộc</h4>
                            <div class="service__excerpt">
-                              <p>Sau 3 tháng học bơi tại trung tâm mình đã tiến bộ hơn rất nhiều, đến thời điểm hiện tại mình đã làm chủ được bản thân khi dưới nước và không còn sợ hãi như trước đây, cảm ơn trung tâm rất nhiều!
+                              <p>Mình đến với Kaisport thông qua người bạn, thời gian trước thực sự mình rất sợ nước, nhưng kể từ khi đến với Kaisport mình tự tin hơn khi xuống nước, và đặc biệt là sức khoẻ của mình cải thiện một cách đáng kể.
                               </p>
                            </div>
                         </div>
