--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2336,7 +2336,8 @@ img{
     font-weight:700;
     font-size:1.8rem;
     line-height:.8em;
-    padding-bottom:20px
+    padding-bottom:20px;
+    text-transform: uppercase
 }
 @media (max-width:767px){
     .homeSection__title{
@@ -4326,7 +4327,7 @@ div.wpcf7 .ajax-loader{
 }
 @media (max-width:991px){
     .client.big .client__image{
-        height:100%;
+        /*height:100%;*/
         width:auto;
         max-width:300%
     }
