--- a/src/app/course/course.component.css
+++ b/src/app/course/course.component.css
@@ -1,5 +1,5 @@
 form, input, textarea, select, button, div, p {
-  font-family: 'Noto Serif', serif!important;
+  font-family: "Roboto", sans-serif !important;
   font-size: 14px;
   letter-spacing: 0.04em;
   -webkit-font-smoothing: antialiased;
