--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -4,7 +4,7 @@ h1, h2, h3, h4, h5, h6, strong, b, th {
 }
 
 form, input, textarea, select, button, div, p {
-  font-family: 'Noto Serif', serif!important;
+  font-family: "Roboto", sans-serif !important;
   font-size: 14px;
   letter-spacing: 0.04em;
   -webkit-font-smoothing: antialiased;
